# Hilo

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  hilo_config.h.in  main.cpp
src/game/: CMakeLists.txt  game.cpp
src/game/include/: game.h
src/include/: CMakeLists.txt  my_utilities.h
src/my_utilities/: CMakeLists.txt  my_utilities.cpp
src/my_utilities/include/: my_utilities.h
